# macproxy

./: .gitignore  Cargo.toml
configuration/: base.json  development.json  production.json
src/: configuration.rs  controller.rs  global_proxy.rs  lib.rs  main.rs  routes.rs  startup.rs  telemetry.rs
src/ca/: mac_proxy.crt  mac_proxy.csr  mac_proxy.key
src/controller/: raycast_ai_chat.rs
src/routes/: proxy_anything.rs
