[package]
name = "mac_proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.2", features = ["full"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
anyhow = "1.0.71"
config = "0.13.3"
uuid = { version = "1.4.0", features = ["serde", "v4"] }
chrono = "0.4.26"
log = "0.4.19"
# env_logger = "0.10.0"
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.17", features = [
  "env-filter",
  "fmt",
  "registry",
] }
tracing-appender = "0.2.3"
tracing-log = "0.2.0"
secrecy = { version = "0.8.0", features = ["serde"] }
reqwest = { version = "0.11.18", features = ["stream", "json"] }
futures = "0.3.29"
hudsucker = { version = "0.20.0", features = ["full"] }
futures-util = "0.3.29"

[dev-dependencies]
once_cell = "1.18.0"
